syntax = "proto3";

option csharp_namespace = "GrpcAPI";

import "shared.proto";

service DatabaseServer {
  rpc CreateDatabase (CreateDatabaseRequest) returns (SuccessResponse);
  rpc HasDatabase (HasDatabaseRequest) returns (HasDatabaseResponse);
  rpc DropDatabase (DropDatabaseRequest) returns (SuccessResponse);
  rpc ClearDatabase (ClearDatabaseRequest) returns (SuccessResponse);
  rpc ListDatabases (EmptyRequest) returns (ListDatabasesResponse);
  rpc GrpcAPIVersion (EmptyRequest) returns (GrpcAPIVersionResponse);
}

message CreateDatabaseRequest {
  SuccessResponseCode code = 1;
  optional string error = 2;
  string name = 3;
}

message HasDatabaseRequest {
  SuccessResponseCode code = 1;
  optional string error = 2;
  string name = 3;
}

message HasDatabaseResponse {
  SuccessResponseCode code = 1;
  optional string error = 2;
  bool hasDatabase = 3;
}

message DropDatabaseRequest {
  SuccessResponseCode code = 1;
  optional string error = 2;
  string name = 3;
}

message ClearDatabaseRequest {
  SuccessResponseCode code = 1;
  optional string error = 2;
  string name = 3;
}


message ListDatabasesResponse {
  SuccessResponseCode code = 1;
  optional string error = 2;
  repeated string databases = 3;
}

message GrpcAPIVersionResponse {
  SuccessResponseCode code = 1;
  optional string error = 2;
  string version = 3;
}